--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ name = "totally-ordered"
 version = "0.1.0"
 authors = ["l0calh05t <l0calh05t@gmx.net>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
