--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "MIT"
 repository = "https://github.com/l0calh05t/totally-ordered-rs.git"
 description = "No dependency, no-std totally ordered f32/f64"
-keywords = ["f32", "f64", "ord", "eq", "hash", "sort"]
+keywords = ["f32", "f64", "ord", "eq", "hash"]
 categories = ["no-std", "rust-patterns"]
 
 [dependencies]
