--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,16 +19,16 @@ jobs:
     - name: Install required components and targets
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: 1.34.0
         target: thumbv6m-none-eabi
         override: true
         components: rustfmt, clippy
     - name: Check formatting
-      run: cargo fmt -- --check --files-with-diff
+      run: cargo fmt -- --check
     - name: Build
-      run: cargo build --verbose
+      run: cargo build
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test
     - name: Clippy lints
       run: cargo clippy
     - name: Ensure no_std compatibility
